--- a/vscode/config.yaml
+++ b/vscode/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Studio Code Server
-version: dev
+version: dev-2
 slug: vscode
 description: Fully featured Visual Studio Code (VSCode) experience integrated in the Home Assistant frontend.
 url: https://github.com/tanelvakker/addon-vscode
